Update profile system v3

--- a/css/themes.css
+++ b/css/themes.css
@@ -270,3 +270,7 @@ body.dark-theme .password-reset-hint {
 body.dark-theme .tooltip-status{
     background: #303030;
 }
+
+body.dark-theme .tooltip-status-arrow{
+    background: #303030;
+}
