--- a/css/pushnotify.css
+++ b/css/pushnotify.css
@@ -1,4 +1,5 @@
 .push-notify {
+    pointer-events: none;
     position: fixed;
     bottom: 20px;
     right: 20px;
@@ -15,6 +16,7 @@
 }
 
 .push-notify.show {
+    pointer-events: auto;
     opacity: 1;
     transform: translateY(0);
 }
