--- a/css/menu.css
+++ b/css/menu.css
@@ -178,6 +178,12 @@
   justify-content: space-between;
 }
 
+.balance-item-icon {
+  width: 18px;
+  height: 18px;
+  flex-shrink: 0;
+}
+
 .balance-amount {
   font-weight: bold;
   color: #000000;
