--- a/css/themes.css
+++ b/css/themes.css
@@ -142,6 +142,10 @@ body.dark-theme .roadmap-container {
   background: #1a1a1a;
 }
 
+body.dark-theme .roadmap-item {
+  background: #1f1f1f;
+}
+
 /* FAQ - Вопросы / Ответы */
 
 /* Фон панели вопросов FAQ*/
@@ -296,6 +300,6 @@ body.dark-theme .password-reset-hint {
 }
 
 /* Для дизайна general settings */
-body.dark-theme .settings-card{ 
+body.dark-theme .settings-card { 
     background: #171717;
 }
