--- a/css/advertisement.css
+++ b/css/advertisement.css
@@ -1,8 +1,8 @@
 /* Advertisement - Рекламный баннер */
 .advertisement-banner {
   display: flex;
-  max-width: 1080px;
-  height: 350px;
+  max-width: 900px;
+  height: 300px;
   background-color: #f5f5f5;
   border-radius: 16px;
   overflow: hidden;
@@ -34,9 +34,10 @@
 }
 
 .advertisement-banner-text {
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-weight: 700;
-  margin-bottom: 1rem;
+  margin-top: -0.1rem;
+  margin-bottom: -0.4rem;
 }
 
 .advertisement-banner-description {
@@ -48,9 +49,9 @@
 .advertisement-banner-note {
   color: #777; /* мягкий серый цвет */
   margin-top: 1.1rem;
-  font-size: 0.9rem;
-  line-height: 1.4;
-  margin-bottom: 1rem;
+  font-size: 0.8rem;
+  line-height: 1.2;
+  margin-bottom: 0.6rem;
 }
 
 .advertisement-banner-button {
@@ -70,8 +71,8 @@
 
 .close-banner-btn {
   position: absolute;
-  top: 12px;
-  right: 12px;
+  top: 5px;
+  right: 8px;
   background-color: rgba(19, 25, 36, 0.23);
   color: #fff;
   border: none;
