--- a/css/settings.css
+++ b/css/settings.css
@@ -82,6 +82,11 @@
   margin-top: 4px;
 }
 
+.tooltip-status-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
 .user-status-icon {
   width: 22px;
   height: 22px;
@@ -90,7 +95,6 @@
   cursor: pointer;
 }
 
-/* Скрываем тултип по умолчанию */
 .tooltip-status {
   position: absolute;
   bottom: 100%; /* над иконкой */
@@ -111,35 +115,24 @@
   user-select: none;
 }
 
-.tooltip-status-wrapper {
-  display: none;
-}
-
-.tooltip-status-wrapper.active {
-  display: flex;
-}
-
-/* Показываем тултип при наведении на иконку */
 .tooltip-status-wrapper:hover .tooltip-status {
   opacity: 1;
   pointer-events: auto;
   transform: translateX(-50%) translateY(0);
 }
 
-/* Заголовок синим и чуть жирнее */
 .tooltip-status-title {
   font-weight: 700;
-  color: #3578e5; /* синий ВК */
+  color: #3578e5;
   margin-bottom: 2px;
   font-size: 13px;
 }
 
-/* Текст обычный, кроме ссылки */
 .tooltip-status-text {
   color: #000;
   line-height: 1.3;
   font-size: 12px;
-  margin-top: 6px; /* регулируй по вкусу */
+  margin-top: 6px;
 }
 
 .tooltip-status-text a {
@@ -152,10 +145,9 @@
   text-decoration: underline;
 }
 
-/* Носик тултипа (треугольник) */
 .tooltip-status-arrow {
   position: absolute;
-  top: 100%; /* снизу тултипа */
+  top: 100%;
   left: 50%;
   transform: translateX(-50%);
   width: 0;
