--- a/css/settings.css
+++ b/css/settings.css
@@ -88,7 +88,10 @@
   object-fit: contain;
   user-select: none;
   cursor: pointer;
+  display: inline-block;
+  vertical-align: middle; /* Это ключевой момент */
 }
+
 
 /* Панель настроек */
 .settings-card {
