--- a/css/settings.css
+++ b/css/settings.css
@@ -82,7 +82,8 @@
   user-select: none;
   cursor: pointer;
   display: inline-block;
-  margin-top: 5px; /* чуть опускает иконку вниз */
+  position: relative;
+  top: 3px; 
 }
 
 /* Чтобы тултип позиционировался относительно иконки */
