Modal overlay update fix 6

--- a/css/promo-modal.css
+++ b/css/promo-modal.css
@@ -12,7 +12,7 @@
   width: 95%;
   max-width: 460px; /* увеличена ширина */
   height: 440px; /* уменьшена высота */
-  background: #fff;
+  background: #FFFFFF;
   border-radius: 16px;
   overflow: hidden;
   position: relative;
