--- a/css/themes.css
+++ b/css/themes.css
@@ -50,7 +50,7 @@ body.dark-theme .theme-input {
 
 /* Modal Window Style */
 body.dark-theme .theme-modal {
-  background-color: #252525;
+  background: #252525;
 }
 
 /* Others Style */
