--- a/css/forgotpassword.css
+++ b/css/forgotpassword.css
@@ -149,3 +149,32 @@
 .forgot-link a:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 480px) {
+  .modal-forgot-password {
+    width: calc(100% - 32px); /* отступы по бокам */
+    padding: 1.5rem;
+  }
+
+  .modal-content h2 {
+    font-size: 1.25rem;
+  }
+
+  .modal-forgotpassword-description {
+    font-size: 0.85rem;
+  }
+
+  .input-wrapper input {
+    font-size: 0.95rem;
+  }
+
+  .modal-actions {
+    align-items: stretch;
+    gap: 2rem;
+  }
+
+  .modal-actions button {
+    width: 100%;
+    text-align: center;
+  }
+}
