Test media mobile version auth.html v2

--- a/css/forgotpassword.css
+++ b/css/forgotpassword.css
@@ -152,29 +152,31 @@
 
 @media (max-width: 480px) {
   .modal-forgot-password {
-    width: calc(100% - 32px); /* отступы по бокам */
-    padding: 1.5rem;
+    width: 100%;
+    max-width: 390px;
+    padding: 1rem;
+    box-sizing: border-box;
+    max-height: 90vh;
+    overflow-y: auto;
   }
 
   .modal-content h2 {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
   }
 
   .modal-forgotpassword-description {
-    font-size: 0.85rem;
+    font-size: 0.8rem;
   }
 
   .input-wrapper input {
-    font-size: 0.95rem;
+    font-size: 0.9rem;
   }
 
   .modal-actions {
-    align-items: stretch;
     gap: 2rem;
   }
 
   .modal-actions button {
     width: 100%;
-    text-align: center;
   }
 }
