--- a/css/auth.css
+++ b/css/auth.css
@@ -389,6 +389,7 @@ body {
   }
 
   .auth-banner {
+    width: 450px;
     max-width: 100%;
     border-radius: 12px;
     box-shadow: 0 6px 16px rgba(0, 0, 0, 0.1);
@@ -400,7 +401,7 @@ body {
 
   /* Форма авторизации */
   .login-container {
-    max-width: calc(100% - 16px);
+    max-width: calc(100% - 6px);
     /* экран минус 16px с каждой стороны */
     padding: 20px 30px;
     margin: 0 auto;
