--- a/css/banner_promo.css
+++ b/css/banner_promo.css
@@ -88,3 +88,72 @@
 .close-banner-btn:hover {
   background-color: rgba(19, 25, 36, 0.4);
 }
+
+/* Мобильные устройства — экраны до 480px */
+@media (max-width: 480px) {
+  .banner-promo {
+    max-width: 450px;
+    height: 270px;
+    margin: 16px auto;
+  }
+
+  .banner-promo-left {
+    padding: 16px;
+  }
+
+  .banner-promo-text {
+    font-size: 1rem;
+    margin-bottom: 0.1rem;
+  }
+
+  .banner-promo-description {
+    font-size: 0.8rem;
+    line-height: 1.3;
+  }
+
+  .banner-promo-note {
+    font-size: 0.7rem;
+    margin-top: -0.1rem;
+    margin-bottom: 0.4rem;
+  }
+
+  .banner-promo-button {
+    padding: 8px 16px;
+    font-size: 0.9rem;
+  }
+}
+
+/* Планшеты устройства — экраны от 481 до 800px */
+@media (min-width: 481px) and (max-width: 800px) {
+  .banner-promo {
+    width: calc(100% - 32px); /* 16px отступ слева и справа */
+    max-width: 740px;
+    height: 270px;
+    margin: 16px auto;
+  }
+
+  .banner-promo-left {
+    padding: 16px;
+  }
+
+  .banner-promo-text {
+    font-size: 1rem;
+    margin-bottom: 0.1rem;
+  }
+
+  .banner-promo-description {
+    font-size: 0.8rem;
+    line-height: 1.3;
+  }
+
+  .banner-promo-note {
+    font-size: 0.7rem;
+    margin-top: 0.5rem;
+    margin-bottom: 0.7rem;
+  }
+
+  .banner-promo-button {
+    padding: 8px 16px;
+    font-size: 0.9rem;
+  }
+}
